Move Hangul name lower

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="absolute inset-0 bg-black/5"></div>
 
                 <div class="relative h-full p-5 sm:p-6 text-[#3b2f20]">
-                  <div class="absolute left-[8%] top-[33%] right-[8%]">
+                  <div class="absolute left-[8%] bottom-[18%] right-[8%]">
                     <div id="hangulName" class="text-2xl sm:text-3xl font-bold mt-1">—</div>
                   </div>
                 </div>
