--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,14 @@
   <title>Terms | Hangul Name Studio</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3970CRW71"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);} \
+    gtag("js", new Date());
+    gtag("config", "G-Y3970CRW71");
+  </script>
 </head>
 <body>
   <main class="wrap">
