Separate Hangul and ID sections

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
           <div class="results" id="results">
             <div id="resultBox" class="mt-4">
               <div class="result-layout">
-                <div class="result-left">
+                <div class="result-segment">
                   <div class="hangul-banner" aria-label="Hangul display">
                     <div id="hangulDisplay" class="hangul-large">—</div>
                   </div>
                 </div>
-                <div class="result-right">
+                <div class="result-segment">
                   <div
                     id="idCard"
                     class="relative mx-auto w-full max-w-[640px] aspect-[85.6/54] rounded-2xl overflow-hidden shadow-lg border border-black/10 font-['Noto_Serif_KR']"
