--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
               <input id="nameInput" placeholder="e.g., Jacob / Jason / Michael" autocomplete="off" />
             </div>
             <button class="btn primary" id="convertBtn">Convert</button>
-            <button class="btn" id="randomBtn" type="button">Surprise me</button>
           </div>
 
           <div class="results" id="results">
@@ -91,7 +90,7 @@
 
                   <div class="mt-3 flex flex-wrap gap-2 items-center">
                     <button id="saveIdBtn" class="px-4 py-2 rounded-lg bg-emerald-700 text-white text-sm hover:bg-emerald-800">
-                      신분증 저장하기
+                      Save ID Card
                     </button>
                   </div>
                 </div>
@@ -335,7 +334,6 @@
     const resultsEl = $("#results");
     const toast = $("#toast");
     const communityList = $("#communityList");
-    const randomBtn = $("#randomBtn");
     const hangulNameEl = $("#hangulName");
     const hangulDisplayEl = $("#hangulDisplay");
     const englishNameEl = $("#englishName");
@@ -466,17 +464,6 @@
         nameInput.focus();
       });
     }
-
-    const RANDOM_NAMES = [
-      "Jacob", "Jason", "Michael", "Emily", "Sophia", "Noah", "Oliver", "Mia",
-      "Ethan", "Ava", "Lucas", "Liam", "Harper", "Mason", "Henry", "Chloe"
-    ];
-
-    randomBtn.addEventListener("click", () => {
-      const pick = RANDOM_NAMES[Math.floor(Math.random() * RANDOM_NAMES.length)];
-      nameInput.value = pick;
-      convert();
-    });
 
     // ------------------------------
     // Normalizers
