Add Sora and Hudson to dictionary

--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
       ["harry", ["해리"]],
       ["helen", ["헬렌"]],
       ["henry", ["헨리"]],
+      ["hudson", ["허드슨"]],
       ["isaac", ["아이작","이삭"]],
       ["isabella", ["이사벨라"]],
       ["isabelle", ["이사벨"]],
@@ -324,6 +325,7 @@
       ["shawn", ["션"]],
       ["simon", ["사이먼"]],
       ["sophia", ["소피아"]],
+      ["sora", ["소라"]],
       ["stephen", ["스티븐"]],
       ["steven", ["스티븐"]],
       ["taylor", ["테일러"]],
